--- a/Project31/Project31.vcxproj
+++ b/Project31/Project31.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="HpBar.cpp" />
     <ClCompile Include="judgeText.cpp" />
+    <ClCompile Include="KeySettingModal.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenuScene.cpp" />
     <ClCompile Include="NameInputUI.cpp" />
@@ -170,6 +171,7 @@
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="HpBar.h" />
     <ClInclude Include="judgeText.h" />
+    <ClInclude Include="KeySettingModal.h" />
     <ClInclude Include="MainMenuScene.h" />
     <ClInclude Include="NameInputUI.h" />
     <ClInclude Include="Note.h" />
