--- a/Project31/Project31.vcxproj.filters
+++ b/Project31/Project31.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="deadPannel.cpp">
       <Filter>소스 파일\UI</Filter>
     </ClCompile>
+    <ClCompile Include="KeySettingModal.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="signal.h">
@@ -213,6 +216,9 @@
       <Filter>헤더 파일\Scene\Scenes</Filter>
     </ClInclude>
     <ClInclude Include="deadPannel.h">
+      <Filter>헤더 파일\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="KeySettingModal.h">
       <Filter>헤더 파일\UI</Filter>
     </ClInclude>
   </ItemGroup>
