songList 클래스. (이제 목록이 회전)

--- a/Project31/Project31.vcxproj
+++ b/Project31/Project31.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="socresPannel.cpp" />
     <ClCompile Include="SongMenuScene.cpp" />
     <ClCompile Include="utils.cpp" />
+    <ClCompile Include="VerticalList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AlbumArt.h" />
@@ -190,6 +191,7 @@
     <ClInclude Include="SongMenuScene.h" />
     <ClInclude Include="NotePlate.h" />
     <ClInclude Include="utils.h" />
+    <ClInclude Include="VerticalList.h" />
   </ItemGroup>
   <ItemGroup>
     <Media Include="bgm\Result.wav" />
