--- a/Project31/Project31.vcxproj
+++ b/Project31/Project31.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="utils.cpp" />
     <ClCompile Include="VerticalList.cpp" />
     <ClCompile Include="ReadyText.cpp" />
+    <ClCompile Include="VisualEvent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AlbumArt.h" />
@@ -194,6 +195,7 @@
     <ClInclude Include="utils.h" />
     <ClInclude Include="VerticalList.h" />
     <ClInclude Include="ReadyText.h" />
+    <ClInclude Include="VisualEvent.h" />
   </ItemGroup>
   <ItemGroup>
     <Media Include="bgm\Result.wav" />
