change path format and delete non-use files for unix

--- a/Project31/CMakeLists.txt
+++ b/Project31/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
 
-add_executable(PerfectRail main.cpp)
+file(GLOB SOURCES "*.cpp")
+add_executable(PerfectRail ${SOURCES})
 target_link_libraries(PerfectRail sfml-graphics sfml-audio)
 
 file(COPY ${CMAKE_SOURCE_DIR}/bgm DESTINATION ${CMAKE_BINARY_DIR})
