feat: key setting option

--- a/Project31/Project31.vcxproj
+++ b/Project31/Project31.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="HpBar.cpp" />
+    <ClCompile Include="input_utils.cpp" />
     <ClCompile Include="judgeText.cpp" />
     <ClCompile Include="KeySettingModal.cpp" />
     <ClCompile Include="main.cpp" />
@@ -175,6 +176,7 @@
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="HpBar.h" />
+    <ClInclude Include="input_utils.h" />
     <ClInclude Include="JudgeText.h" />
     <ClInclude Include="KeySettingModal.h" />
     <ClInclude Include="MainMenuScene.h" />
