--- a/Project31/Project31.vcxproj.filters
+++ b/Project31/Project31.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClCompile Include="AudioVisualizer.cpp">
       <Filter>소스 파일\UI</Filter>
     </ClCompile>
+    <ClCompile Include="input_utils.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="signal.h">
@@ -244,6 +247,9 @@
     </ClInclude>
     <ClInclude Include="AudioVisualizer.h">
       <Filter>헤더 파일\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="input_utils.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
