--- a/Project31/Project31.vcxproj.filters
+++ b/Project31/Project31.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClCompile Include="input_utils.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ui_utils.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="signal.h">
@@ -249,6 +252,9 @@
       <Filter>헤더 파일\UI</Filter>
     </ClInclude>
     <ClInclude Include="input_utils.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ui_utils.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
